deploy/kubernetes/service.yaml
#
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
apiVersion: v1
kind: Service
metadata:
  name: rocketmq-dashboard-backend
  namespace: rocketmq-dashboard
  labels:
    app.kubernetes.io/name: rocketmq-dashboard
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: rocketmq-dashboard
    app.kubernetes.io/component: backend
---
apiVersion: v1
kind: Service
metadata:
  name: rocketmq-dashboard-frontend
  namespace: rocketmq-dashboard
  labels:
    app.kubernetes.io/name: rocketmq-dashboard
    app.kubernetes.io/component: frontend
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: rocketmq-dashboard
    app.kubernetes.io/component: frontend
